# PoC

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  cleanup.sh  docker-compose.yaml  ips.txt  iptables-rules.sh  package-lock.json  supervisord.conf  unlock_ips.sh
.github/workflows/: build-and-test.yaml  release.yaml
front/src/: index.css
front/src/components/: Footer.tsx  MachineLink.css  Visualizer.css
installer/: Dockerfile  Makefile  cleanup.sh  run.sh  wormsec.service
pocFront_Angular/: README.md  angular.json  package-lock.json  tsconfig.app.json
pocFront_Angular/src/: styles.scss
pocFront_Angular/src/app/components/footer/: footer.component.scss  footer.component.ts
pocFront_Angular/src/app/components/header/: header.component.html  header.component.ts
pocFront_Angular/src/app/components/information/: information.component.html  information.component.scss  information.component.ts
pocFront_Angular/src/app/components/machine/: machine.component.html  machine.component.ts
src/: App.css  App.tsx  iptables.rs  main.rs  network.rs  state.rs  types.ts  utils.rs  watcher.rs  web_server.rs
src/components/: Header.tsx  Machine.css  MachineLink.tsx
ui/: angular.json  documentation_ui.md  package-lock.json  package.json  tsconfig.json
ui/src/: App.test.tsx  App.tsx  index.html
ui/src/app/: app.component.html  app.component.scss  app.component.ts
ui/src/app/models/: types.ts
ui/src/components/: Header.css  Information.css  Information.tsx  Machine.css  Machine.tsx  MachineLink.css  MachineLink.tsx  Visualizer.css  Visualizer.tsx
(+12 files in other folders)
