[package]
name = "wormsec-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
inotify = "0.11.0"
local-ip-address = "0.6.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6.2", features = ["fs"] }
once_cell = "1.21.1"
axum = "0.8.1"
hyper = { version = "1", features = ["server", "http1", "http2"] }